--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Gagan Texture and Designers",
-  "short_name": "GaganDesign",
-  "start_url": "/index.html",
+  "short_name": "GaganTexture",
+  "start_url": "/gaganatexture/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#333333",
+  "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/gaganatexture/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/gaganatexture/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
